# MTL

./: .gitignore  CMakeLists.txt  README.md
src/: AxisAngle.hpp  DCM.hpp  Euler.hpp  Matrix.hpp  Quaternion.hpp  RotationSequence.hpp  SquareMatrix.hpp  Vector.hpp  Vector3.hpp
unit-test/: CMakeLists.txt  TestAxisAngle.cpp  TestDCM.cpp  TestEuler.cpp  TestMatrix.cpp  TestQuaternion.cpp  TestSquareMatrix.cpp  TestVector.cpp  TestVector3.cpp
